application/views/scss/components/_misc.scss
/* ... */
.btn-dropdown {
    padding-#{$end-direction}: 3rem;
    .dropdown-toggle-custom-arrow {
        #{$end-direction}: 1rem;
    }
}

.offcanvas-backdrop {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1040;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.7);
}

.slider-controls {
    display: flex;
    align-items: center;
    justify-content: center;
    grid-gap: 1rem;
    flex-direction: row;
    flex-wrap: nowrap;
    .btn {
        background-color: #fff;
        @include media-breakpoint-up(lg) {
            border: $border-black;
        }
        padding: 0;
        width: 42px;
        height: 42px;
        // display: block;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 0;
        &-prev span {
            display: inline-block;
            border-right: 1px solid black;
            border-bottom: 1px solid black;
            width: 10px;
            height: 10px;
            transform: rotate(-225deg);
            margin-#{$end-direction}: -7px;
        }

        &-next span {
            display: inline-block;
            border-right: 1px solid black;
            border-bottom: 1px solid black;
            width: 10px;
            height: 10px;
            transform: rotate(-45deg);
            margin-#{$start-direction}: -7px;
        }
    }
} //phone code
.iti {
    width: 100%;
    height: $input-height;
    font-size: 0.8rem;
    &__selected-flag {
        background-color: $input-bg;
        border-radius: $input-border-radius;
        margin-#{$end-direction}: 10px !important;
    }

    &[dir="ltr"] {
        .iti__flag-container {
            right: auto !important;
            left: 0 !important;
        }
        .iti__country-list {
            left: 0;
            text-align: left;
        }
    }

    &[dir="rtl"] {
        .iti__flag-container {
            right: 0 !important;
            left: auto !important;
        }
        .iti__country-list {
            text-align: right;
            right: 0;
        }
    }
}
.processing-wrap {
    position: relative;
}
.processing {
    background-color: rgba(255, 255, 255, 0.55);
    position: absolute;
    z-index: 1024;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    &:after {
        position: absolute;
        content: "";
        background-color: rgba(255, 255, 255, 0.05);
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        z-index: 1;
    }
}
//skeleton
// .skeleton-loader-background {
//     width: 100%;
//     height: 15px;
//     display: block;
//     background: lightgray;
// }

// .skeleton-loader-gradient {
//     width: 100%;
//     height: 15px;
//     display: block;
//     background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80%), lightgray;
//     background-repeat: repeat-y;
//     background-size: 50px 200px;
//     background-position: 0 0;
// }

// .skeleton-loader {
//     &:empty {
//         width: 100%;
//         height: 15px;
//         display: block;
//         background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80%), lightgray;
//         background-repeat: repeat-y;
//         background-size: 50px 500px;
//         background-position: 0 0;
//         animation: shine 1s infinite;
//     }
// }

// @keyframes shine {
//     to {
//         background-position: 100% 0;
//     }
// }

.skeleton {
    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80%), lightgray;
    border-radius: 2px;
    height: 20px;
    margin: 2px 0;
    position: relative;
    overflow: hidden;
    &::before {
        content: "";
        display: block;
        position: absolute;
        left: -150px;
        top: 0;
        height: 100%;
        width: 150px;
        background: linear-gradient(to right, transparent 0%, #e8e8e8 50%, transparent 100%);
        animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
    }
}

@keyframes load {
    from {
        left: -150px;
    }

    to {
        left: 100%;
    }
}

.grid-layout {
    display: grid;
    grid-gap: 5rem;

    grid-template-columns: minmax(auto, 24%) 1fr;
}

.badges-list {
    display: inline-flex;
    align-items: center;
    gap: 10px;
    &-img {
        border-radius: 6px;
        height: 100%;
        width: 100%;
        object-fit: cover;
        max-width: 22px;
    }
}

